# Iglotron

./: .gitignore
camera_app/: CMakeLists.txt  CMakeSettings.json  QUICKSTART.txt  README.md  SETTINGS_README.md  SETUP.md  app_state.h  camera_app.pro  frangi.cpp  frangi.h  frangi_processor.cpp  frangi_processor.h  frangiglwidget.cpp  frangiglwidget.h  gl_renderer.cpp  gl_renderer.h  gui_manager.cpp  gui_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  mask_filters.h  settings.cpp  settings.h  settings.json  test_settings.json
camera_app/managers/headers/: camera_manager.h  window_manager.h
camera_app/managers/src/: camera_manager.cpp  gui_manager.cpp  window_manager.cpp
camera_app/processors/headers/: frangi_processor.h  gl_renderer.h
camera_app/processors/src/: frangi_processor.cpp  gl_renderer.cpp  mask_filters.cpp
camera_app/settings/configs/: settings.json
camera_app/settings/headers/: settings.h
camera_app/settings/src/: settings.cpp
frangi-filter-main/: index.html
frangi-filter-main/css/: style.css
frangi-filter-main/js/: frangi-filter copy.js  frangi-filter.js
